2022-11-28  Jacob Bachmeyer  <jcb@gnu.org>

	* testsuite/runtest.main/stats.exp: Add test for UNSUPPORTED
	result from a unit test program.
	* testsuite/runtest.main/nested/testsuite/stat.test/unit-sub.awk:
	Update to account for addition of END marker and UNSUPPORTED to
	DejaGnu unit testing protocol.

	* dejagnu.h: Add UNSUPPORTED test result.
	(unsupport): New counter variable for UNSUPPORTED results.
	(unsupported): New function in C API.
	(TestState::unsupported): New function in C++ API.
	(outstate_list): Add UNSUPPORTED entry.
	(teststate::laststate): Likewise.
	(totals): Mention number of unsupported tests.
	(TestState::totals): Likewise for C++ API.
	* lib/dejagnu.exp (host_execute): Add UNSUPPORTED test result.
	* doc/dejagnu.texi (DejaGnu unit test protocol): Document same.
	* testsuite/libdejagnu/unit-c.c: Add test for UNSUPPORTED.
	* testsuite/libdejagnu/unit.exp: Likewise.

	* testsuite/libdejagnu/unit.exp: Add test for NOTE message.

2022-11-26  Jacob Bachmeyer  <jcb@gnu.org>

	* Makefile.in: Regenerate.
	* Makefile.am (AM_CXXFLAGS): Change this...
	(AM_CPPFLAGS): ...to this.  (Also remove -g flag.)
	(check_PROGRAMS): Add testsuite/libdejagnu/unit-c.
	(testsuite_libdejagnu_unit_c_SOURCES): Add.
	(TESTSUITE_FILES): Update.
	* testsuite/libdejagnu/unit-c.c: New file.
	* testsuite/libdejagnu/unit.exp: New file.

	* dejagnu.h (xpass): Fix use of wrong counter.
	(xfail): Likewise.
	(totals): Report unexpected passes if any occurred.

	* doc/dejagnu.texi (DejaGnu unit test protocol): Add end marker
	line using "END" to allow detecting tests that exit prematurely.
	The "Totals:" line was previously used for this purpose, but it
	does not match the pattern documented as reserved for carrying
	unit test results and information.

	* lib/dejagnu.exp (host_execute): Remove test for "Totals" line.
	(host_execute): Add corresponding support for the new line types.

	* dejagnu.h (totals): Add end marker.
	(TestState::totals): Likewise.
